[package]
name = "ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ecs"
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.15.1", default-features = false }
bevy_ecs = "0.15.1"
pyo3 = "0.23.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-tracy = "0.11.4"
tracy-client = "0.18.0"
