[package]
name = "ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ecs"
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.15.1", default-features = false, features = ["bevy_remote", "trace_tracy"] }
bevy_ecs = "0.15.1"
iterstats = "0.6.0"
itertools = "0.14.0"
pyo3 = "0.23.3"
rand = "0.8.5"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
tracing-tracy = "0.11.4"
tracy-client = "0.18.0"
